[workspace]
members = [    
    "pipeline",
    "bin"
]
exclude = []
resolver = "2"

[profile.release-with-debug]
inherits = "release"
debug-assertions = true
debug = true

[workspace.package]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]

serde = {version = "1.0", features = ["derive"]}
toml = "0.7"
async-trait = "0.1"
futures = "0.3.28"
libp2p = { version = "0.53.2", features = ["tokio", "request-response", "cbor", "gossipsub", "mdns", "noise", "macros", "tcp", "yamux"] }
num_enum = "0.6.1"
clap = { version = "4.3.21", features = ["derive"] }
log = "0.4.25"
env_logger = "0.10.0"
uuid = { version = "1.4.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
home = "0.5.5"
reqwest = "0.11"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bincode = "1.3.3"
byteorder = { version = "1.5.0" }
bs58 = { version = "0.5.1", features = ["check"]}
chrono = { version = "0.4.38", features = ["serde"] }
anyhow = "1.0.86"
hex = "0.4.3"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
serde_json = "1.0.134"
rand = "0.9.1"

# r0
risc0-zkvm = { version = "2.3.1", features = ["prove"] }

# sp1
sp1-zkvm = { version = "=4.1.7", features = ["verify"] }

mongodb = "3.1.0"
redis = { version = "0.32", features = ["tokio-comp"] }
tokio = "1.45.1"
tokio-stream = "0.1.17"

peyk = {path = "../peyk"}
