[workspace]
members = [    
    "pipeline",
    "bin"
]
exclude = []
resolver = "2"

[profile.release-with-debug]
inherits = "release"
debug-assertions = true
debug = true

[workspace.package]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]

serde = {version = "1.0", features = ["derive"]}
toml = "0.7"
async-trait = "0.1"
futures = "0.3.28"
libp2p = { version = "0.53.2", features = ["tokio", "request-response", "cbor", "gossipsub", "mdns", "noise", "macros", "tcp", "yamux"] }
clap = { version = "4.3.21", features = ["derive"] }
log = "0.4.25"
env_logger = "0.10.0"
uuid = { version = "1.4.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
reqwest = "0.11"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bincode = "1.3.3"
anyhow = "1.0.86"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
serde_json = "1.0.134"
rand = "0.9.1"
mongodb = "3.1.0"
redis = { version = "0.32", features = ["tokio-comp"] }
tokio = "1.45.1"
tokio-stream = "0.1.17"
#rs_merkle = "1.5.0"

anbar = { path = "../anbar" }
peyk = { path = "../peyk" }
