[package]
name = "pipeline"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
log.workspace = true
toml.workspace = true
anyhow.workspace = true
bincode.workspace = true
xxhash-rust.workspace = true
uuid.workspace = true
risc0-zkvm.workspace = true
sp1-zkvm.workspace = true
hex.workspace = true