[package]
name = "pipeline"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
log.workspace = true
toml.workspace = true
anyhow.workspace = true
bincode.workspace = true
xxhash-rust.workspace = true
libp2p.workspace = true
uuid.workspace = true

# sp1
sp1-sdk = { version = "5.1.2", default-features = false }
